--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tools/hid_win32_interceptor"]
-	path = tools/hid_win32_interceptor
+	path = hid_win32_interceptor
 	url = https://github.com/jherico/HidInterceptor.git
